<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/full_product_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/productonebig" />

        <LinearLayout
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/product_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_size"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/product_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/product_color"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:id="@+id/product_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/product_price"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_13sdp" />

            <TextView
                android:padding="@dimen/_10sdp"
                android:id="@+id/product_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/description_example"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp" />

            <Button
                android:layout_margin="@dimen/_10sdp"
                android:id="@+id/add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:text="@string/add_to_cart"
                android:textColor="@color/icons" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>