<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/checkout_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sub_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="@dimen/_5sdp"
            android:text="@string/sub_total"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPlaceOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_weight="1"
            android:onClick="placeOrder"
            android:background="@color/colorPrimaryDark"
            android:text="@string/placeOrder"
            android:textColor="@color/icons" />

        <Button
            android:id="@+id/shopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/continue_shopping"
            android:textColor="@color/icons" />

    </LinearLayout>

</RelativeLayout>